# flowaim

./: .gitignore  Cargo.toml  README.md
src/: gitignore_check.rs  main.rs
src/api/: auth.rs  mod.rs  schemas.rs  stats.rs  tables.rs
