[package]
name = "flowaim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biscuit-auth = "3.1.0"
clap = { version = "4.3.0", features = ["derive"] }
config = "0.13.3"
console = "0.15.7"
data-encoding = "2.4.0"
dialoguer = "0.10.4"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
indicatif = "0.17.3"
serde = { version = "1.0.163", features = ["derive"] }
ureq = { version = "2.6.2", features = ["json"] }
